styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    body {
        @apply font-system bg-white text-neutral-900 dark:bg-neutral-900 dark:text-white;
    }

    h1, h2, h3, .h1, .h2, .h3 {
        @apply font-degular
    }

    .h1 {
        @apply font-bold leading-none text-4xl sm:text-5xl md:text-6xl 2xl:text-7xl
    }

    .h2 {
        @apply text-3xl sm:text-4xl md:text-5xl font-bold
    }

    .h3 {
        @apply font-bold font-degular text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl
    }

    .h4 {
        @apply uppercase font-degular tracking-wider font-semibold text-neutral-600 dark:text-neutral-500 text-sm;
    }

    ::selection {
        @apply bg-neutral-900 text-white dark:bg-white dark:text-neutral-900;
      }
    ::-moz-selection {
        @apply bg-neutral-900 text-white dark:bg-white dark:text-neutral-900;
    }

}

@layer components {
    .container {
        @apply px-6 md:px-16 mx-auto max-w-5xl lg:px-8 lg:max-w-7xl
    }

    .textLink {
        @apply text-link-light-default dark:text-link-dark-default underline underline-offset-4;
    }

    .textLink:hover {
        @apply text-link-light-hover dark:text-link-dark-hover;
    }

    .workSlider .slick-track,
    .testimonialSlider .slick-track {
        display: flex;
      }
    .workSlider .slick-track .slick-slide,
    .testimonialSlider .stlick-track .slick-slide {
        display: flex;
        height: auto;
        align-items: center;
        justify-content: center;
      }

    .workSlider .slick-dots,
    .testimonialSlider .slick-dots {
        bottom: 8% !important;
    }

    .workSlider .slick-dots li button:before {
        font-size: 10px;
        @apply text-black dark:text-white;
    }
    .workSlider .slick-dots li.slick-active button:before {
        font-size: 14px;
        @apply text-black dark:text-white;
    }

    .testimonialSlider .slick-dots li button:before {
        font-size: 10px;
        @apply text-black;
    }
    .testimonialSlider .slick-dots li.slick-active button:before {
        font-size: 14px;
        @apply text-black;
    }

    .bgSlider {
        @apply absolute w-full h-full
    }

    .bgSlider .slick-list {
        @apply h-full;
    }

    .bgSlider .slick-list .slick-slider {
        @apply h-full;
    }
    .bgSlider .slick-list .slick-slider > div {
        @apply h-full;
    }
    .bgSlider .slick-list .slick-slider > div > div {
        @apply h-full;
    }
}

@layer utilities {
    .aspect-16x9 {
        padding-bottom: 56.25%;
        @apply relative;
    }

    .aspect-16x9 iframe {
        @apply absolute top-0 left-0 w-full h-full;
    }
}

